--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
         "zendframework/zend-expressive-twigrenderer": "^1.2"
     },
     "require-dev": {
-        "psr/container": "^1.*"
-    }
+        "psr/container": "^1.0"
+    },
     "autoload": {
         "psr-4": {
             "Hkt\\Psr7AssetExample\\":"src/"
